# app/Http/Controllers/type_6/UserController.php
@@ -1,21 +1,21 @@
 <?php
 
-namespace App\Http\Controllers\type_4;
+namespace App\Http\Controllers\type_6;
 
 use Carbon\Carbon;
+use App\Models\user6;
 use Illuminate\Http\Request;
 use App\Http\Controllers\Controller;
-use App\Models\User4;
-use App\Models\User4_history;
 use Illuminate\Support\Facades\Validator;
+use Illuminate\Validation\Rule;
 
 class UserController extends Controller
 {
      /**
      * @OA\Post(
      *    summary="add tracking",
-     *     path="/api/type_4/user",
-     *     tags={"Type_4"},
+     *     path="/api/type_6/user",
+     *     tags={"Type_6"},
      * 
      *   @OA\Parameter(
      *     name="name",
@@ -52,47 +52,49 @@ class UserController extends Controller
      * )
      */
     public function store(Request $request){
-        $validator = Validator::make($request->all(),[
-            'name' => 'required',
-            'surname' => 'required',
-            'position_id' => 'required|numeric',
-            'dept_id' => 'required|numeric'
+        $validator = Validator::make($request->all(), [
+            'name' => 'string' ,
+            'surname' => 'string',
+            'position_id' => 'integer',
+            'dept_id' => 'integer',
         ]);
         if($validator->fails()){
-            return response()->json(['errors'=> $validator->errors()]);
+            return [
+                'errors' => $validator->errors()
+            ];
         }
         $token = bin2hex(openssl_random_pseudo_bytes(8));
         $date_start = Carbon::now()->format('y:m:d h:i:s');
-        $user = User4::create([
-            'token' => $token,
+        $user = user6::create([
             'name' => $request->name,
-            'surname' => $request->surname,
             'position_id' => $request->position_id,
             'dept_id' => $request->dept_id,
-         
+            'date_start' => $date_start,
+            'date_end' => $date_start,
+            'current' => 1,
+            'token' => $token,
         ]);
-        return response()->json(['user_id' => $user]);
+        return $user;
     }
-    /**
+ /**
      * @OA\Get(
      *    summary="add tracking",
-     *     path="/api/type_4/user",
-     *     tags={"Type_4"},
+     *     path="/api/type_6/user",
+     *     tags={"Type_6"},
      *     @OA\Response(response="200", description="Display a listing of type-auto."),
      *     @OA\Response(response=401, description="Unauthorized"),
      *     @OA\Response(response=404, description="Not Found"),
      * )
      */
     public function index(){
-        $users  = User4::where('id' ,'>' ,0)->get();
-        return $users;
+        return user6::where('current' , 1)->get();
     }
 
-     /**
+    /**
      * @OA\Patch(
      *    summary="adad tracking",
-     *     path="/api/type_4/user/{id}",
-     *     tags={"Type_4"},
+     *     path="/api/type_6/user/{id}",
+     *     tags={"Type_6"},
      * 
      *   @OA\Parameter(
      *     name="id",
@@ -136,49 +138,46 @@ class UserController extends Controller
      * )
      */
     public function update(Request $request , $id){
-        
-        $user = User4::find($id);
-        $date_end = Carbon::now()->format('y:m:d h:i:s');
-        $last_user = User4_history::create([
-            'token' => $user->token,
-            'name' =>$user->name,
-            "surname" => $user->surname,
-            "position_id" => $user->position_id,
-            "dept_id" => $user->dept_id,
-            'date_start' => $user->created_at,
-            'date_end' => $date_end
+        $validator = Validator::make($request->all(), [
+            'id' => Rule::exists(user6::class , 'id'),
+            'name' => 'string',
+            'surname' => 'string',
+            'position_id' => 'integer',
+            'dept_id' => 'integer',
         ]);
-        $user->update([
+        if($validator->fails()){
+            return [
+                'errors' => $validator->errors()
+            ];
+        }
+        $validator = Validator::make(['id' => $id] ,[
+            'id' => Rule::exists(user6::class),
+        ]);
+        if($validator->fails()){
+            return [
+                'errors' => $validator->errors()
+            ];
+        }
+        $user = user6::find($id);
+        $token = $user->token;
+        $date_end = Carbon::now()->format('y:m:d h:i:s');
+        $user->date_end =  $date_end;
+        $user->current = 0;
+        $user->save();
+        $new_user = user6::create([
             'name' => $request->name,
-            'surname' => $request->surname,
             'position_id' => $request->position_id,
             'dept_id' => $request->dept_id,
+            'date_start' => $date_end,
+            'date_end' => $date_end,
+            'current' => 1,
+            'token' => $token,
         ]);
-        return [
-            'LAST_data' => $last_user,
-            'new data' => $user,
-        ];
+        return $new_user;
     }
-      /**
-     * @OA\Get(
-     *    summary="add tracking",
-     *     path="/api/type_4/user/{id}",
-     *     tags={"Type_4"},
-     *   @OA\Parameter(
-     *     name="id",
-     *     in="path",
-     *     required=true,
-     *     @OA\Schema
-     *          (type="integer")
-     *     ),
-     *     @OA\Response(response="200", description="Display a listing of type-auto."),
-     *     @OA\Response(response=401, description="Unauthorized"),
-     *     @OA\Response(response=404, description="Not Found"),
-     * )
-     */
     public function show($id){
-        $user  = User4::find($id);
-        $users = User4_history::where('token' , $user->token)->get();
-        return ['active' => $user, 'history'=>$users];
+        $token  = user6::find($id)->token;
+        return user6::where('token' , $token)->get();
     }
+
 }
